--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "mindforce/editorial_codemirror",
+    "name": "mindforce/cakephp-editorial-codemirror",
     "description": "Editorial Codemirror editor plugin for CakePHP",
     "type": "cakephp-plugin",
     "require": {
         "php": ">=5.4",
         "cakephp/plugin-installer": "*",
         "cakephp/cakephp": "3.0.x-dev",
-        "mindforce/editorial": "*"
+        "mindforce/cakephp-editorial": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
