--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,21 @@
 {
     "name": "mindforce/cakephp-editorial-codemirror",
     "description": "Editorial Codemirror editor plugin for CakePHP",
-    "type": "cakephp-plugin",
+	"homepage": "http://mindforce.me",
+	"keywords": ["cakephp", "ui", "editor", "Codemirror"],
+	"type": "cakephp-plugin",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "Denys Kyselov",
+			"homepage": "https://mindforce.me"
+		}
+	],
+	"support": {
+		"issues": "https://github.com/mindforce/cakephp-editorial-codemirror/issues",
+		"source": "https://github.com/mindforce/cakephp-editorial-codemirror"
+	},
+	"minimum-stability": "dev",
     "require": {
         "php": ">=5.4",
         "cakephp/plugin-installer": "*",
