--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "require": {
         "php": ">=5.4",
         "cakephp/plugin-installer": "*",
-        "cakephp/cakephp": "3.0.x",
+        "cakephp/cakephp": "3.0.*",
         "mindforce/cakephp-editorial": "*"
     },
     "require-dev": {
